force-app/main/default/objects/Magento_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A List Custom Setting to store values used in the integration between UniCRM Professional Development and Magento</description>
    <fields>
        <fullName>MagentoHMACKey__c</fullName>
        <label>MagentoHMACKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MagentoStatus_Expired__c</fullName>
        <label>MagentoStatus_Expired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MagentoStatus_Paid__c</fullName>
        <label>MagentoStatus_Paid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MagentoStatus_Refunded__c</fullName>
        <label>MagentoStatus_Refunded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MagentoStatus_Removed__c</fullName>
        <label>MagentoStatus_Removed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MagentoURL__c</fullName>
        <label>MagentoURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Magento Settings</label>
</CustomObject>